--- a/word-addin/package.json
+++ b/word-addin/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "build": "webpack --mode production",
+    "serve": "node server/server.js",
     "build:dev": "webpack --mode development",
     "dev-server": "webpack serve --mode development",
     "lint": "office-addin-lint check",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "core-js": "^3.36.0",
+    "express": "^5.2.1",
     "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
